# Bartelby

./: .gitignore  .gitmodules  App.cpp  App.h  CMakeLists.txt  Graphics.cpp  Graphics.h  README.md  README.rst  basic.f.glsl  basic.v.glsl  main.cpp
msvc/: .gitignore  Bartelby.sln  Bartelby.vcxproj
